--- a/src/embedded-item/embeddedItem.css
+++ b/src/embedded-item/embeddedItem.css
@@ -1,3 +1,19 @@
-.embedded-item__file-type-icon {
-  margin-right: 8px;
+.viewer__embedded-item {
+  display: flex;
+  align-items: center;
+}
+
+.viewer__embedded-item__info {
+  display: inline-flex;
+  flex-basis: auto;
+  flex-direction: row;
+  flex-grow: 1;
+  justify-content: space-between;
+}
+
+.viewer__embedded-item__info > div {
+}
+
+.viewer__embedded-item__file-type-icon {
+  margin-right: 0.5rem;
 }
