--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+@media screen and (min-width: 768px) {
+  #root > div {
+    max-width: 768px;
+    margin: 0 auto;
+  }
+}
