--- a/src/spinner/spinner.css
+++ b/src/spinner/spinner.css
@@ -1,13 +1,13 @@
 .spinner {
-  --border-size: 8px;
-  --spinner-size: 72px;
+  --border-size: 0.25rem;
+  --spinner-size: 3rem;
   border: var(--border-size) solid var(--light);
   border-top: var(--border-size) solid var(--gray-dark);
   border-radius: 50%;
   width: var(--spinner-size);
   height: var(--spinner-size);
   animation: spin 2s linear infinite;
-  margin: 48px auto;
+  margin: 1rem auto;
 }
 
 @keyframes spin {
